# podcastvox

./: .gitignore  README.md  pyproject.toml  webui.py
sample/: rashoumon_blog.md  rashoumon_conversation.json  rashoumon_dialogue.md
scripts/: webui.bat  webui.sh
src/: agent.py  fetcher.py  podcast.py  voicevox.py
tests/: test_agent.py  test_fetcher.py  test_podcast.py  test_voicevox.py
